[package]
name = "brb"
version = "1.0.6"
description = "BRB: a Byzantine Fault Tolerant (BFT) system for achieving network agreement over eventually consistent data-type algorithms such as CRDTs"
authors = [ "David Rusu <davidrusu.me@gmail.com>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/brb"
edition = "2018"

[dependencies]
crdts = "5.0.0"
rand = "0.8.2"
serde = "1.0.120"
bincode = "1.3.1"
hex = "0.4.2"
thiserror = "1.0"
brb_membership = "1.0.2"
log = "0.4.13"

  [dependencies.ed25519]
  version = "1.0.1"
  package = "ed25519-dalek"
  features = [ "serde" ]

[profile.test]
opt-level = 3
