[package]
name = "brb_node_qp2p"
version = "0.1.0"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
edition = "2018"
license = "MIT OR BSD-3-Clause"

[[bin]]
name = "brb_node"
path = "src/brb_node.rs"

[dependencies]
rand = "0.7.3"
serde = "1.0.106"
bincode = "1.2.1"
brb = { git = "https://github.com/maidsafe/brb", branch = "master" }
brb_dt_orswot = { git = "https://github.com/maidsafe/brb_dt_orswot", branch = "master" }
cmdr = { git = "https://github.com/mendelt/cmdr", rev = "8407462be39bb932ec86eea1b36ce325f3034ccb" }
tokio = { version = "~0.2.22", features = ["full"] }
qp2p = { git = "https://github.com/maidsafe/qp2p", rev = "10b7c25b55788cb4e1253e557cfe6d8d53d00cb0" }

# [profile.test]
# opt-level = 3
# lto = "fat"
# incremental = false
